--- a/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
+++ b/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
@@ -23,32 +23,28 @@ limitations under the License.
 >
   <h3>{{ t("headline") }}</h3>
 
-  <watt-button
-    variant="secondary"
-    icon="plus"
-    data-testid="newCalculation.add"
-    [routerLink]="['new']"
-  >
+  <watt-button variant="secondary" data-testid="newCalculation.add" [routerLink]="['new']">
     {{ t("new") }}
   </watt-button>
 
   <watt-button
     *dhPermissionRequired="['dh2-bridge:import']"
-    variant="icon"
-    icon="moreVertical"
-    [matMenuTriggerFor]="menu"
-  />
+    variant="secondary"
+    [wattMenuTriggerFor]="menu"
+  >
+    <watt-icon name="moreVertical" />
+  </watt-button>
+
+  <watt-menu #menu>
+    <watt-menu-item (click)="uploader.selectFile()">
+      <span>{{ t("capacitySettlements.uploadButton") }}</span>
+    </watt-menu-item>
+  </watt-menu>
 
   <dh-capacity-settlements-uploader
     [uploadUrl]="dataSource.query.data()?.calculations?.capacitySettlementsUploadUrl ?? ''"
     #uploader
   />
-
-  <mat-menu #menu="matMenu">
-    <button type="button" mat-menu-item (click)="uploader.selectFile()">
-      {{ t("capacitySettlements.uploadButton") }}
-    </button>
-  </mat-menu>
 
   <watt-data-filters>
     <dh-calculations-filters [filter]="filter" (filterChange)="fetch($event)" />
