--- a/libs/dh/market-participant/feature-market-participant/src/components/market-participants.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/market-participants.component.html
@@ -19,11 +19,11 @@ limitations under the License.
   inset="ml"
   *transloco="let t; prefix: 'marketParticipant.actorsOverview'"
   [searchLabel]="'shared.search' | transloco"
+  [simpleSearch]="true"
   [error]="dataSource.error"
   [ready]="dataSource.called"
+  [enableCount]="false"
 >
-  <h3>{{ t("actors") }}</h3>
-
   <watt-data-actions>
     <watt-button variant="secondary" [wattMenuTriggerFor]="menu">
       {{ t("actionsButton") }}
